feat: enhance TopicsView with loading state, search, filter, and sort functionalities

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "retention-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node backend/server.js"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
