--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "node backend/server.js"
+    "server": "cd backend && node server.js",
+    "server:install": "cd backend && npm install",
+    "start": "concurrently \"npm run dev\" \"npm run server\"",
+    "setup": "npm install && npm run server:install"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
@@ -20,6 +23,7 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "concurrently": "^8.2.2",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
